# diploma

./: CMakeLists.txt  README.md  docker-compose.yml
apphost/: visualizer.py
apphost/graphs/: search.yaml
category/: CMakeLists.txt  Makefile  README.md
category/.devcontainer/: devcontainer.json
category/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
category/postgresql/data/: initial_data.sql
category/src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_postgres.cpp  hello_postgres.hpp  main.cpp
category/tests/: conftest.py  test_basic.py  test_postgres.py
post-search/: CMakeLists.txt  Makefile  README.md
post-search/.devcontainer/: devcontainer.json
post-search/configs/: static_config.yaml
post-search/docs/: Attribute.yaml  Category.yaml  CategoryShort.yaml  Delivery.yaml  Filter.yaml  FilterOption.yaml  Image.yaml  MarketplaceResponse.yaml  Pagination.yaml  Price.yaml  Product.yaml  Promotion.yaml  Rating.yaml  Seller.yaml  schema.yaml
post-search/proto/handlers/: post_search.proto
post-search/schemas/: Attribute.yaml  Category.yaml  Delivery.yaml  MarketplaceResponse.yaml  Product.yaml  Promotion.yaml  Seller.yaml
post-search/src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_grpc.cpp  hello_grpc.hpp  main.cpp  renderer.cpp  renderer.hpp
post-search/tests/: conftest.py  test_grpc.py
src/: benchmark.cpp  diff.cpp  hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
